# Sistema-Experto-para-Recomendaci-n-de-Plantas-en-Hogares-de-Tierra-del-Fuego

./: .gitignore  Makefile  README.md  __init__.py  expert_system.py  licence  pyproject.toml  setup.cfg  setup.py
backup_old_structure/: app.py  decision_tree.py  plants_data.py  rules.py
config/: __init__.py
docs/: knowledge_structure.md
docs/entrega-3/: INSTRUCCIONES-VIDEO.md  README-ENTREGA-3.md  video-demostrativo-link.txt
scripts/: migrate_structure.py
src/: __init__.py  app.py  decision_tree.py  plants_data.py  rules.py
src/plant_advisor/: __init__.py
src/plant_advisor/knowledge/: __init__.py
src/plant_advisor/models/: __init__.py
src/plant_advisor/services/: __init__.py
src/plant_advisor/utils/: __init__.py
src/web/: __init__.py
src/web/middleware/: __init__.py
src/web/routes/: __init__.py
static/: style.css
templates/: consulta.html  demo.html  error.html  index.html  info.html
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py
